@@ -1,9 +1,10 @@
 # File: azure-template-publish-job.yml
-# Date: 8-Jul-2019 jdw split out from original pipeline
 #
 # Update:
-# 6-Aug-2019 jdw push source wheels (universal) for linux
-#
+#   8-Jul-2019 jdw split out from original pipeline
+#   6-Aug-2019 jdw push source wheels (universal) for linux
+#  10-Oct-2024 mjt macos 12->13, ubuntu 20->22
+#   2-Dec-2025 dwp publish wheel to PyPI
 ##
 parameters:
   tox: ""
@@ -29,19 +30,13 @@ jobs:
         addToPath: true
       displayName: setup python
     #
-    #- checkout: self
-    #  submodules: true
-    #
     - download: current
       artifact: ${{ format('sw_{0}_{1}', parameters.tox,  parameters.os) }}
-
-    - download: current
-      artifact: ${{ format('sw_u_{0}_{1}', parameters.tox,  parameters.os) }}
     #
     - script: ls -lR $(Pipeline.Workspace)/${{ format('sw_{0}_{1}', parameters.tox, parameters.os) }}
       displayName: "Listing of downloaded artifacts"
     #
-    - script: python -m pip install --upgrade pip twine setuptools wheel
+    - script: python -m pip install --upgrade pip twine wheel hatch
       displayName: 'Install packaging tools'
     #
     - task: DownloadSecureFile@1
@@ -49,13 +44,8 @@ jobs:
       displayName: 'Download PyPI credentials'
       inputs:
         secureFile: 'PYPIRC-AZURE'
-
-    - ${{ if startsWith(parameters.os, 'linux') }}:
-      - script: twine upload --verbose --skip-existing -r pypi  --config-file $(pypicred.secureFilePath) $(Pipeline.Workspace)/${{ format('sw_u_{0}_{1}', parameters.tox, parameters.os) }}/*
-        displayName: "Linux upload sdist and source wheel to PyPi ..."
-        continueOnError: true
     #
-    - ${{ if startsWith(parameters.os, 'macos') }}:
+    - ${{ if startsWith(parameters.os, 'linux') }}:
       - script: twine upload --verbose --skip-existing -r pypi  --config-file $(pypicred.secureFilePath) $(Pipeline.Workspace)/${{ format('sw_{0}_{1}', parameters.tox, parameters.os) }}/*
-        displayName: "Mac upload sdist and binary wheel to PyPi ..."
+        displayName: "Linux upload sdist and binary wheel to PyPi ..."
         continueOnError: true
