@@ -123,21 +123,15 @@ jobs:
       #  Build artifacts if this is a test target (i.e. labeled as py##)
       #
       - ${{ if startsWith(parameters.tox, 'py') }}:
-          - script: pip install --upgrade pip build twine
+          - script: pip install --upgrade pip build twine hatch
             displayName: "Acquire build tools"
           - script: python -m build --sdist --wheel --outdir "$(System.DefaultWorkingDirectory)/dist"
             displayName: "Build source and wheel distributions"
-          - script: python -m build --sdist --outdir "$(System.DefaultWorkingDirectory)/udist"
-            displayName: "Build source distribution to udist"
-
           #
           # Check the install artifacts
-          - script: ls -lR "$(System.DefaultWorkingDirectory)/dist" "$(System.DefaultWorkingDirectory)/udist"
+          - script: ls -lR "$(System.DefaultWorkingDirectory)/dist"
             displayName: "Listing of installed software"
           #
           - publish: $(System.DefaultWorkingDirectory)/dist
             artifact: ${{ format('sw_{0}_{1}', parameters.tox, parameters.os) }}
-          #
-          - publish: $(System.DefaultWorkingDirectory)/udist
-            artifact: ${{ format('sw_u_{0}_{1}', parameters.tox, parameters.os) }}
         #
